fix script tag visibility in entry-content

--- a/src/styles/config/_reset.scss
+++ b/src/styles/config/_reset.scss
@@ -184,6 +184,10 @@ section {
   display: block;
 }
 
+script {
+  display: none !important;
+}
+
 .screen-reader-text {
   position: absolute !important;
   clip: rect(1px, 1px, 1px, 1px);
